[package]
name = "fast_luhn"
version = "0.1.5"
authors = ["Matt Stroganov <strmatvey@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.6"

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[lib]
name = "fast_luhn"
crate-type = ["cdylib"]

[package.metadata.pyo3-pack]
classifier = ["Programming Language :: Python"]

[package.metadata]

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin"]

[target.'cfg(target_os = "macos")]
macosx-deployment-target = "10.13"
